project2/force-app/main/default/objects/User/fields/Number_of_Ratings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Ratings__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Ratings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>