project2/force-app/main/default/objects/User/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>