project2/force-app/main/default/objects/User/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blocked</label>
    <type>Checkbox</type>
</CustomField>